03-creating-services/ingress/traefik-ingress/caddy.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: caddy-service
spec: 
  selector: 
    app: caddy-pod
  ports:
    - name: web
      port: 80
      targetPort: 2015
  #type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: caddy
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: caddy-pod
    spec:
      containers:
      - name: caddy-pod
        image: abiosoft/caddy:php
        #image: abiosoft/caddy
        ports:
        - containerPort: 2015
