03-creating-services/ingress/traefik-ingress/traefik-ingress-lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-lb-svc
  namespace: kube-system
spec:
  selector:
    name: traefik-ingress-lb
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 31742
  #type: LoadBalancer
  type: NodePort
